# watermark-master

./: .gitignore  README.md  pyproject.toml
src/watermark_master/: __main__.py
src/watermark_master/backend/: __init__.py  fileops.py  image_processor.py  watermark_adder.py
src/watermark_master/frontend/: main_window.py
